--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -33,7 +33,7 @@
         width: 100%;
         height: 100vh;
         @include flex(column, space-evenly, center);
-        gap: 25px 0;
+        // gap: 25px 0;
 
         &__logo {
             @include flex(column);
@@ -85,6 +85,7 @@
 
         &__footer {
             color: white;
+            margin-bottom: 30px;
         }
     }
 }
