--- a/components/project/project.module.scss
+++ b/components/project/project.module.scss
@@ -3,59 +3,37 @@
 
 .project {
     width: 100%;
-    height: auto;
+    // border: 1px solid white;
+    height: 300px;
     transition: all .3s ease-in-out;
-    position: relative;
-
-    &__image {
-        width: 100%;
-        height: 100%;
-
-        &__img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-
-    &__description {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        color: white;
-        background-color: rgba($color: blueviolet, $alpha: 0.8);
-        display: none;
-
-        h2 {
-            text-transform: uppercase;
-        }
-
-        &__projectLink {
-            text-decoration: none;
-            padding: 10px 20px;
-            background-color: white;
-            color: blueviolet;
-        }
-    }
-
-    &:hover &__description{
-        @include flex(column, center, center);
-        gap: 10px 0;
-    }
 
     @include sm {
         width: 50%;
     }
 
     @include md {
-        width: 30%;
+        width: 40%;
     }
 
     @include lg {
-        width: 20%;
+        width: 25%;
     }
 
+    &__image {
+        position: relative;
+        width: 100%;
+        height: 90%;
+    }
 
+    &__description {
+        width: 100%;
+        padding: 10px 0;
+        @include text($fontSize: 10px);
+        text-align: center;
+        background-color: rgba($color: blueviolet, $alpha: 0.8);
+
+        @include md {
+            font-size: 12px;
+        }
+    }
 }
