--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -1,15 +1,20 @@
 
 
-@mixin flex($direction: row, $justify_content: center, $align_items: center) {
+@mixin flex($direction: row, $justifyContent: center, $alignItems:center, $wrap: nowrap) {
     display: flex;
     flex-direction: $direction;
-    justify-content: $justify_content;
-    align-items: $align_items;
+    justify-content: $justifyContent;
+    align-items: $alignItems;
+    flex-wrap: $wrap;
 }
 
-@mixin section {
-    width: 100vw;
-    padding: 70px 20px 30px;
+@mixin text($color: white, $fontSize: 18px, $transform: uppercase, $fontWeight: 400, $leter-spacing: 1.2px, $decoration: none) {
+    font-size: $fontSize;
+    color: $color;
+    text-transform: $transform;
+    font-weight: $fontWeight;
+    letter-spacing: $leter-spacing;
+    text-decoration: $decoration;
 }
 
 @mixin section_title {
