--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/mixin' as *;
-@use '../../styles/breakpoints' as *;
+@use './styles/mixin' as *;
+@use './styles/breakpoints' as *;
 
 .about {
 
@@ -8,7 +8,7 @@
     }
 
     &__aboutMe {
-        @include flex(column, center, center);
+        @include flex($direction: column);
         gap: 20px 0;
 
         @include lg {
