--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @use './variables' as var;
+@use './breakpoints' as *;
 
 * {
   margin: 0;
@@ -14,4 +15,21 @@ html {
   /* background-color: #25272B; */
   scroll-behavior: smooth;
   font-family: var.$font-source-sans;
+}
+
+.container {
+  width: 95%;
+  margin: 0 auto;
+  padding: 30px 0 70px;
+
+  @include md {
+    width: 80%;
+    margin: 20px 20%;
+    padding: 0 20px;
+  }
+
+  @include lg {
+    width: 85%;
+    margin: 20px 15%;
+  }
 }
