--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -1,13 +1,19 @@
 @use '../../styles/mixin' as *;
+@use '../../styles/breakpoints' as *;
 
 .hero {
     width: 100%;
     height: 100vh;
-    @include flex(column, center, flex-start);
+    @include flex($direction: column, $alignItems: flex-start);
     gap: 60px 0;
     color: white;
 
+    @include lg {
+        padding-left: 150px;
+    }
+
     &__aboutMe {
+        @include flex(column, center, flex-start);
         font-size: 40px;
         font-weight: 700;
     }
@@ -23,7 +29,7 @@
             font-size: 18px;
             color: white;
             padding: 10px 20px;
-            background-color: blueviolet;
+            background-color: rgb(138, 43, 226);
         }
     }
 }
