--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -8,7 +8,7 @@
     }
 
     &__aboutMe {
-        @include flex($direction: column);
+        @include flex($wrap: wrap);
         gap: 20px 0;
 
         @include lg {
@@ -18,6 +18,7 @@
         &__image {
             width: 90%;
             height: auto;
+            @include flex;
 
             @include md {
                 width: 60%;
@@ -35,8 +36,10 @@
         }
 
         &__description {
+            @include flex($direction: column);
+            gap: 15px 0;
             color: white;
-            font-size: 20px;
+            font-size: 16px;
             text-align: justify;
             letter-spacing: 1.5px;
             line-height: 1.5;
@@ -44,23 +47,29 @@
             @include lg {
                 flex: 2;
             }
-        }
-    }
 
-    &__btn {
-        text-transform: uppercase;
-        text-decoration: none;
-        font-size: 18px;
-        color: white;
-        padding: 10px 20px;
-        background-color: blueviolet;
-        border: none;
-        margin: 30px 0;
-
-        @include lg {
-            margin-left: calc(50% - 100px);
-            margin-top: 50px;
-        }
+            &__resume {
+                margin-top: 30px;
+                width: 100%;
+                @include flex($direction: column, $alignItems: flex-start);
+                gap: 10px 0;
+                color: white;
+                font-size: 16px;
+                text-align: justify;
+                letter-spacing: 1.5px;
         
+                &__btn {
+                    @include text($fontSize: 14px);
+                    padding: 8px 15px;
+                    background-color: blueviolet;
+                    border: none;
+                }
+                
+            }
+        }
     }
+
+    
+
+    
 }
