--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/mixin' as *;
-@use '../../styles/breakpoints' as *;
+@use './mixin' as *;
+@use './breakpoints' as *;
 
 .contact {
 
