--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -3,32 +3,63 @@
 
 .hero {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 50px);
     @include flex($direction: column, $alignItems: flex-start);
-    gap: 60px 0;
+    gap: 50px 0;
     color: white;
 
-    @include lg {
-        padding-left: 150px;
+    @include md {
+        @include flex($direction: column);
+        height: calc(100vh - 50px);
+    }
+
+    &__image {
+        display: none;
+        position: relative;
+        width: 100px;
+        height: 100px;
+        cursor: pointer;
+
+        @include md {
+            display: block;
+        }
     }
 
     &__aboutMe {
-        @include flex(column, center, flex-start);
-        font-size: 40px;
+        @include flex($direction: column, $alignItems: flex-start);
+        gap: 30px 0;
+        font-size: 30px;
         font-weight: 700;
+        letter-spacing: 2px;
+
+        @include md {
+            @include flex($direction: column, $justifyContent: center);
+            font-size: 40px;
+        }
+
+        &__myName {
+            padding: 10px 20px;
+            background-color: rgb(138, 43, 226);
+            border-radius: 15px;
+        }
     }
 
     &__text {
-        font-size: 25px;
-        @include flex(column, center, flex-start);
+        font-size: 20px;
+        @include flex($direction: column, $alignItems: flex-start);
         gap: 15px 0;
+
+        @include md {
+            @include flex($direction: column);
+            font-size: 30px;
+        }
 
         &__btn {
             text-transform: uppercase;
             text-decoration: none;
-            font-size: 18px;
+            font-size: 16px;
             color: white;
-            padding: 10px 20px;
+            padding: 8px 20px;
             background-color: rgb(138, 43, 226);
         }
     }
