--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -12,40 +12,49 @@
         gap: 20px 0;
 
         @include lg {
+            height: calc(100vh - 150px);
             @include flex;
+            gap: 0 50px;
         }
 
         &__image {
-            width: 90%;
-            height: auto;
+            // border: 1px solid white;
+            position: relative;
+            width: 80%;
+            height: 300px;
             @include flex;
+
+            @include sm {
+                height: 400px;
+            }
 
             @include md {
                 width: 60%;
             }
 
             @include lg {
-                flex: 1;
+                width: 30%;
+                height: 300px;
             }
 
-            &__img {
-                width: 100%;
-                height: 100%;
+            @include xl {
+                height: 350px;
             }
             
         }
 
         &__description {
-            @include flex($direction: column);
+            @include flex($direction: column, $alignItems: flex-start);
             gap: 15px 0;
             color: white;
             font-size: 16px;
             text-align: justify;
-            letter-spacing: 1.5px;
+            letter-spacing: 1.4px;
             line-height: 1.5;
 
             @include lg {
                 flex: 2;
+                font-size: 18px;
             }
 
             &__resume {
@@ -63,6 +72,11 @@
                     padding: 8px 15px;
                     background-color: blueviolet;
                     border: none;
+
+                    @include lg {
+                        font-size: 15px;
+                        padding: 12px 20px;
+                    }
                 }
                 
             }
