--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -38,6 +38,7 @@
             }
 
             @include xl {
+                width: 27%;
                 height: 350px;
             }
             
