--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -57,10 +57,14 @@
         &__btn {
             text-transform: uppercase;
             text-decoration: none;
-            font-size: 16px;
+            font-size: 14px;
             color: white;
-            padding: 8px 20px;
+            padding: 6px 15px;
             background-color: rgb(138, 43, 226);
+
+            @include lg {
+                padding: 10px 20px;
+            }
         }
     }
 }
