--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -7,6 +7,7 @@
     bottom: 0;
     border-top: 1px solid rgb(138, 43, 226);
     background-color: #221f1f;
+    box-shadow: 0px 1px 12px rgb(153, 54, 247);
     z-index: 999;
 
     @include md {
@@ -14,6 +15,7 @@
         top: 0;
         border-right: 1px solid rgb(138, 43, 226);
         border-top: none;
+        box-shadow: 1px 0px 12px rgb(153, 54, 247);
     }   
 
     @include lg {
@@ -43,6 +45,10 @@
                 margin-bottom: 30px;
                 cursor: pointer;
 
+                @include landscape {
+                    height: 30%;
+                }
+
                 img {
                     width: 100%;
                     height: 100%;
@@ -53,6 +59,10 @@
                 @include flex(column, center, center);
                 gap: 10px 0;
                 text-align: center;
+
+                @include landscape {
+                    display: none;
+                }
                 
                 p{
                     font-size: 20px;
