--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -28,6 +28,11 @@
             @include flex(column, center, center);
             gap: 10px 0;
             line-height: 1.5;
+
+            &__myMail {
+                padding: 8px 15px;
+                background-color: blueviolet;
+            }
         }
 
         &__inputControls {
