--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -73,6 +73,7 @@
                     padding: 8px 15px;
                     background-color: blueviolet;
                     border: none;
+                    cursor: pointer;
 
                     @include lg {
                         font-size: 15px;
